spacing issues on Vegoons, favicons

--- a/src/styles.css
+++ b/src/styles.css
@@ -819,7 +819,6 @@ section {
 }
 
 #vegoons header {
-    margin-top: 6em;
     box-shadow: 0 3px 3px lightgrey;
     opacity: 0;
     animation: fade-in 0.2s ease-out 0.3s forwards, scale-down 0.2s ease-out 0.3s;
